#3166 closed bug (fixed)
Wonderbrush crashing when max zooming large image
Reported by: | humdinger | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is on vmware (1gb RAM), hrev28625.
When working with a large image (in my case 2480 x 3508), Haiku's crashing when I reach maximal zooming level (x3200). ActivityMonitor reports around 280mb used memory. See attached serial-log.txt. Nope... can't attach a file... It's quite short though:
vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x70555000, ip 0x2a8b47, write 1, user 1, thread 0xb0 vm_page_fault: thread "w:173:WonderBrush | Haiku-Alpha" (176) in team "app_server" (49) tried to write address 0x70555000, ip 0x2a8b47 ("app_server_seg0ro" +0xa8b47) stack trace: 0x002a8846 (app_server_seg0ro + 0xa8846) 0x002a76bb (app_server_seg0ro + 0xa76bb) 0x00296b85 (app_server_seg0ro + 0x96b85) 0x00281d30 (app_server_seg0ro + 0x81d30) 0x002813a6 (app_server_seg0ro + 0x813a6) 0x0027f0dd (app_server_seg0ro + 0x7f0dd) 0x00285106 (app_server_seg0ro + 0x85106) 0x002675c0 (app_server_seg0ro + 0x675c0) 0x006f49b8 (libroot.so_seg0ro + 0x259b8) 0x70594fec (w:173:WonderBrush_176_stack + 0x3ffec) vm_soft_fault: va 0x0 not covered by area in address space vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x0, ip 0x800cda9c, write 0, user 0, thread 0xb0 debug_server: Thread 176 entered the debugger: Segment violation stack trace, current PC 0x2a8b47 _DrawBitmapNearestNeighborCopy32__C7PainterRQ23aggt13row_ptr_cache1ZUcddddG5BRect + 0x1bb: (0x705948dc) 0x2a8846 _DrawBitmap__C7PainterRQ23aggt13row_ptr_cache1ZUc11color_spaceG5BRectN23Ul + 0x992 (0x705949ac) 0x2a76bb DrawBitmap__C7PainterPC12ServerBitmapG5BRectT2Ul + 0x1eb (0x70594a5c) 0x296b85 DrawBitmap__13DrawingEngineP12ServerBitmapRC5BRectT2Ul + 0x145 (0x70594aec) 0x281d30 _DispatchViewDrawingMessage__12ServerWindowlRQ28BPrivate12LinkReceiver + 0x738 (0x70594c4c) 0x2813a6 _DispatchViewMessage__12ServerWindowlRQ28BPrivate12LinkReceiver + 0x220e (0x70594dec) 0x27f0dd _DispatchMessage__12ServerWindowlRQ28BPrivate12LinkReceiver + 0x1181 (0x70594f0c) 0x285106 _MessageLooper__12ServerWindow + 0x282 (0x70594f7c) 0x2675c0 _message_thread__13MessageLooperPv + 0x28 (0x70594fac) 0x6f49b8 thread_entry + 0x20
It's probably not Wonderbrush's fault. Please reassign to the appropriate component.
Change History (4)
comment:1 by , 16 years ago
comment:2 by , 16 years ago
Component: | - General → Servers/app_server |
---|
Note:
See TracTickets
for help on using tickets.
Ah yeah, I think I am seeing a flaw in my upscaling filters... it's probably eating all the stack to store the filter indexes. It should limit them to the screen size, or better yet, the bounding box of the clipping region...