For the filter indices and wheight calculation, never calculate more pixels than can possibly be visible. Clients may pass very large view rects to layout a zoomed in bitmap. This doesn't only speed things up, but also avoids a stack overflow in the app_server, as reported in #3166.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29397 a95241bf-73f2-0310-859d-f6bbb57e9c96